--- a/easy_admin/templates/challenge_result.html
+++ b/easy_admin/templates/challenge_result.html
@@ -47,7 +47,8 @@
                                class="btn btn-primary"><i class="bi bi-filetype-docx"></i></a>
                         </td>
                         <td>
-                            <a href="#" class="btn btn-primary"><i class="bi bi-filetype-docx"></i></a>
+                            <a href="/admin/get_detailed/{{ row.challenge_id }}/{{ row.user_id }}/"
+                               class="btn btn-primary"><i class="bi bi-filetype-docx"></i></a>
                         </td>
                     </tr>
                 {% endfor %}
