--- a/easy_admin/templates/main.html
+++ b/easy_admin/templates/main.html
@@ -1,28 +1,19 @@
 {% extends "layout.html" %}
+{% load static %}
 {% block title %}
     Dolandyryjy gurallary
 {% endblock title %}
 {% block head %}
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
 {% endblock head %}
 {% block body %}
-    <div class="container my-2">
-        <table class="table border-1">
-            <thead>
-                <tr class="border-bottom-line bg-light">
-                    <th scope="col">№</th>
-                    <th scope="col">Ady we Familiýasy</th>
-                    <th scope="col">Gatnaşan senesi</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for row in users %}
-                    <tr class="border-y-line">
-                        <th scope="row">{{ row.pk }}</th>
-                        <td>{{ row.username }}</td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+    <div class="container my-2 d-flex justify-content-center">
+        <div class="card card-width">
+            <div class="card-body">
+                <h5 class="card-title">URL</h5>
+                <a href="{% url 'challenge_results' %}">Challenge Results</a>
+            </div>
+        </div>
     </div>
 {% endblock body %}
 {% block scripts %}
