--- a/easy_admin/templates/main.html
+++ b/easy_admin/templates/main.html
@@ -11,7 +11,12 @@
         <div class="card card-width">
             <div class="card-body">
                 <h5 class="card-title">URL</h5>
-                <a href="{% url 'challenge_results' %}">Challenge Results</a>
+                <div>
+                    <a href="{% url 'challenges' %}">Challenge Results</a>
+                </div>
+                <div>
+                    <a href="{% url 'editable_challenges' %}">Edit Challenges</a>
+                </div>
             </div>
         </div>
     </div>
