--- a/easy_admin/templates/layout.html
+++ b/easy_admin/templates/layout.html
@@ -9,6 +9,7 @@
             {% endblock title %}
         - IT meýdança Quizz</title>
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/global.css' %}">
         <link rel="stylesheet"
               href="{% static 'bootstrap-icons/font/bootstrap-icons.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/layout.css' %}">
@@ -16,20 +17,32 @@
         {% endblock head %}
     </head>
     <body class="bg-smoke">
-        <header class="p-4 bg-light border-bottom-line">
-            <div>IT meýdança quizz</div>
-        </header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class='container-fluid'>
+                <a class="navbar-brand m-2" href="{% url 'home' %}">IT Meýdança Quizz</a>
+                <button class="navbar-toggler"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
+        </nav>
         {% block body %}
         {% endblock body %}
         <footer class="d-flex p-4 bg-light border-top-line fixed-bottom">
             <div>
-                <b>Copyright 2024.</b> Ähli hukuklar goralan
+                <b>&copy; 2024, IT Meýdança Quizz,</b> Ähli hukuklar goralan
             </div>
             <div class="ml-auto">
                 <i>Developed by neharix</i>
             </div>
         </footer>
         <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+        <script src="{% static 'js/jquery.js' %}"></script>
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
         {% block scripts %}
         {% endblock scripts %}
