--- a/easy_admin/templates/editable_challenges.html
+++ b/easy_admin/templates/editable_challenges.html
@@ -9,7 +9,7 @@
     <div class="container my-2">
         <div class="my-2 d-flex">
             <a class="btn btn-success ml-auto" href="add/">
-                <i class="bi bi-plus"></i> Test goşmak
+                <i class="bi bi-plus-circle"></i> Test goşmak
             </a>
         </div>
         <table class="table border-1">
