--- a/easy_admin/templates/add_question.html
+++ b/easy_admin/templates/add_question.html
@@ -41,5 +41,8 @@
         }
     }
     select.parentElement.style = "display: none;"
+
+    let complexity_select = document.getElementById("id_complexity");
+    complexity_select.setAttribute("class", "form-control my-2");
     </script>
 {% endblock scripts %}
