--- a/easy_admin/templates/edit_challenge.html
+++ b/easy_admin/templates/edit_challenge.html
@@ -27,6 +27,7 @@
                         <th scope="col">№</th>
                         <th scope="col">Sorag</th>
                         <th scope="col">Suratmy?</th>
+                        <th scope="col">Derejesi</th>
                         <th scope="col"></th>
                     </tr>
                 </thead>
@@ -48,6 +49,7 @@
                                     <i class="bi bi-x-circle-fill" style="color: red !important"></i>
                                 </td>
                             {% endif %}
+                            <td>{{ row.complexity.level }}</td>
                             <td>
                                 <a href="edit_question/{{ row.pk }}/" class="btn btn-primary"><i class="bi bi-gear"></i></a> <a href="delete_question/{{ row.pk }}/" class="btn btn-danger"><i class="bi bi-trash3"></i></a>
                             </td>
