some changes in main.html

--- a/easy_admin/templates/add_answer.html
+++ b/easy_admin/templates/add_answer.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% load static %}
 {% block title %}
-    "{{ challenge.name }}" testine sorag goşmak
+    Jogap goşmak
 {% endblock title %}
 {% block head %}
     <link rel="stylesheet" href="{% static 'css/toggle.css' %}">
