--- a/easy_admin/templates/edit_question.html
+++ b/easy_admin/templates/edit_question.html
@@ -51,7 +51,7 @@
                         <div>
                             <b>Görnüşi:</b> Tekst
                         </div>
-                        <div style="color: transparent;">Nothing</div>
+                        <div style="color: transparent;">0</div>
                     {% endif %}
                 </div>
                 <div>
@@ -74,13 +74,13 @@
                 <div class="d-none">
                     <input type="number" value="{{ question.pk }}">
                 </div>
-                <div class="d-flex">
+                <div class="d-flex my-4">
                     <button class="btn btn-secondary"
                             type="button"
                             data-bs-toggle="offcanvas"
                             data-bs-target="#offcanvasRight"
                             aria-controls="offcanvasRight">
-                        <i class="bi bi-clock-history"></i>
+                        <i class="bi bi-list"></i> Soragyň jogaplary
                     </button>
                     <button type="submit" class="btn btn-primary ml-auto">Tassyklamak</button>
                 </div>
@@ -100,15 +100,38 @@
         </div>
         <div class="offcanvas-body">
             <div class="d-flex ml-auto">
-                <a class="btn btn-success ml-auto" href="add_answer/">
-                    <i class="bi bi-plus-circle"></i> Jogap goşmak
-                </a>
+                {% if answers|length < 4 %}
+                    <a class="btn btn-success ml-auto" href="add_answer/">
+                        <i class="bi bi-plus-circle"></i> Jogap goşmak
+                    </a>
+                {% else %}
+                    <button class="btn btn-success disabled ml-auto" href="add_question/">
+                        <i class="bi bi-plus-circle"></i> Ýeterlikli jogap girizildi
+                    </button>
+                {% endif %}
             </div>
             {% for answer in answers %}
                 <div class="border mt-2 rounded-2 bg-white">
-                    <div class='h6 m-2 mb-3' style='color: gray;'>Jogap ID: {{ answer.pk }}</div>
+                    <div class='h6 m-2 mb-3'>Jogap ID: {{ answer.pk }}</div>
+                    {% if answer.is_image %}
+                        <div class='h6 m-2 mb-3'>
+                            Jogap: <a class="link link-secondary" href="/media/{{ answer.image }}/">{{ answer.image|truncatechars:25 }}</a>
+                        </div>
+                    {% else %}
+                        <div class='h6 m-2 mb-3'>Jogap: {{ answer.answer|truncatewords:4 }}</div>
+                    {% endif %}
+                    <div class='h6 m-2 mb-3' style='color: gray;'>
+                        Dogry jogap:
+                        {% if answer.is_true %}
+                            <i class="bi bi-check-circle-fill"
+                               style="color: rgb(0, 215, 0) !important"></i>
+                        {% else %}
+                            <i class="bi bi-x-circle-fill" style="color: red !important"></i>
+                        {% endif %}
+                    </div>
                     <div class="m-2 mb-2">
-                        <a href="edit_answer/{{ answer.pk }}/" class="btn btn-outline-secondary">Üýtgetmek</a>
+                        <a href="edit_answer/{{ answer.pk }}/" class="btn btn-secondary">Üýtgetmek</a>
+                        <a href="delete_answer/{{ answer.pk }}/" class="btn btn-danger"><i class="bi bi-trash3"></i></a>
                     </div>
                 </div>
             {% endfor %}
