--- a/easy_admin/templates/layout.html
+++ b/easy_admin/templates/layout.html
@@ -17,9 +17,9 @@
         {% endblock head %}
     </head>
     <body class="bg-smoke">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav id="navbar" class="navbar bg-dark navbar-expand-lg">
             <div class='container-fluid'>
-                <a class="navbar-brand m-2" href="{% url 'home' %}">IT Meýdança Quizz</a>
+                <a class="navbar-brand m-2 text-light" href="{% url 'home' %}">IT Meýdança Quizz</a>
                 <button class="navbar-toggler"
                         type="button"
                         data-bs-toggle="collapse"
@@ -33,7 +33,7 @@
         </nav>
         {% block body %}
         {% endblock body %}
-        <footer class="d-flex p-4 bg-light border-top-line fixed-bottom">
+        <footer id="footer" class="d-flex p-4 bg-dark fixed-bottom text-light">
             <div>
                 <b>&copy; 2024, IT Meýdança Quizz,</b> Ähli hukuklar goralan
             </div>
