added excel importer

--- a/easy_admin/templates/main.html
+++ b/easy_admin/templates/main.html
@@ -29,32 +29,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0">
-                <div class="card">
-                    <div class="card-header">
-                        <h5 class="m-0">api</h5>
-                    </div>
-                    <div class="card-body">
-                        <table class="table table-sm">
-                            <tbody>
-                                <tr>
-                                    <td>
-                                        <a href="/superuser/api/authjournal/">Auth journals</a>
-                                    </td>
-                                    <td>
-                                        <div class="btn-group float-right">
-                                            <a href="/superuser/api/authjournal/add/"
-                                               class="btn btn-xs btn-success addlink">Add</a>
-                                            <a href="/superuser/api/authjournal/"
-                                               class="btn btn-xs btn-info changelink">Change</a>
-                                        </div>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
+            <div class="col p-4"></div>
         </div>
     </div>
 {% endblock body %}
