--- a/easy_admin/templates/main.html
+++ b/easy_admin/templates/main.html
@@ -26,6 +26,11 @@
                                class="nav-link px-0 align-middle">
                                 <i class="bi-pen"></i> <span class="ms-1 d-none d-sm-inline">Ýaryşlary üýtgetmek</span> </a>
                         </li>
+                        <li>
+                            <a href="{% url 'import_from_xlsx' %}"
+                               class="nav-link px-0 align-middle">
+                                <i class="bi bi-filetype-xlsx"></i> <span class="ms-1 d-none d-sm-inline">Excel arkaly import</span> </a>
+                        </li>
                     </ul>
                 </div>
             </div>
