--- a/easy_admin/templates/layout.html
+++ b/easy_admin/templates/layout.html
@@ -43,7 +43,7 @@
         </footer>
         <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
         <script src="{% static 'js/jquery.js' %}"></script>
-        <script src="{% static 'js/bootstrap.min.js' %}"></script>
+        <script src="{% static 'js/bootstrap.js' %}"></script>
         {% block scripts %}
         {% endblock scripts %}
     </body>
