added some fixtions and new font

--- a/easy_admin/templates/edit_challenge.html
+++ b/easy_admin/templates/edit_challenge.html
@@ -8,9 +8,14 @@
 {% block body %}
     <div class="container my-2">
         <div class="my-2 d-flex">
-            <a class="btn btn-success ml-auto" href="add_question/">
-                <i class="bi bi-plus-circle"></i> Sorag goşmak
-            </a>
+            <div class="ml-auto">
+                <a class="btn btn-success mx-2" href="import_from_xlsx/">
+                    <i class="bi bi-filetype-xlsx"></i> Excel arkaly import
+                </a>
+                <a class="btn btn-primary" href="add_question/">
+                    <i class="bi bi-plus-circle"></i> Sorag goşmak
+                </a>
+            </div>
         </div>
         <div class="my-2">
             <table class="table border-1 rounded">
