--- a/easy_admin/templates/layout.html
+++ b/easy_admin/templates/layout.html
@@ -16,7 +16,7 @@
         {% block head %}
         {% endblock head %}
     </head>
-    <body class="bg-smoke">
+    <body class="bg-smoke overpass">
         <nav id="navbar" class="navbar bg-dark navbar-expand-lg">
             <div class='container-fluid'>
                 <a class="navbar-brand m-2 text-light" href="{% url 'home' %}">IT Meýdança Quizz</a>
