--- a/easy_admin/static/css/global.css
+++ b/easy_admin/static/css/global.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: Overpass;
+    src: url(/static/fonts/Overpass/Overpass-Regular.ttf);
+}
+
+.overpass {
+    font-family: Overpass !important;
+}
+
 .mr-auto {
     margin-right: auto !important;
 }
