--- a/easy_admin/templates/editable_challenges.html
+++ b/easy_admin/templates/editable_challenges.html
@@ -8,7 +8,7 @@
 {% block body %}
     <div class="container my-2">
         <div class="my-2 d-flex">
-            <a class="btn btn-success ml-auto" href="add/">
+            <a class="btn btn-primary ml-auto" href="add/">
                 <i class="bi bi-plus-circle"></i> Test goşmak
             </a>
         </div>
