--- a/easy_admin/templates/import_from_xlsx.html
+++ b/easy_admin/templates/import_from_xlsx.html
@@ -26,22 +26,9 @@
                     Surat galyby
                     <input type="checkbox" class="form-check-input" id="image_checkbox">
                 </div>
-                <div class="justify-content-center"
-                     id="toggle-wrap"
-                     style="display: none !important">
-                    <div class="toggle">
-                        <input type="radio" id="choice1" name="choice">
-                        <label for="choice1">Surat</label>
-                        <input type="radio" id="choice2" name="choice">
-                        <label style="padding-left: 60px;" for="choice2">ZIP</label>
-                        <div id="flap">
-                            <span class="content">ZIP</span>
-                        </div>
-                    </div>
-                </div>
                 <div id="filebox" class="my-2" style="display: none !important;">
                     <label for="zipfile" class="my-2">ZIP faýl:</label>
-                    <input type="file" class="form-control my-2" id="zipfile">
+                    <input type="file" class="form-control my-2" id="zipfile" name="zip">
                 </div>
                 <div class="d-flex">
                     <a href="{% static 'xlsx/nusga.xlsx' %}"
