--- a/easy_admin/templates/layout.html
+++ b/easy_admin/templates/layout.html
@@ -13,6 +13,9 @@
         <link rel="stylesheet"
               href="{% static 'bootstrap-icons/font/bootstrap-icons.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/layout.css' %}">
+        <link rel="shortcut icon"
+              href="{% static 'ico/admin_icon.ico' %}"
+              type="image/x-icon">
         {% block head %}
         {% endblock head %}
     </head>
