--- a/easy_admin/templates/edit_challenge.html
+++ b/easy_admin/templates/edit_challenge.html
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div class="my-2">
-            <table class="table border-1 rounded">
+            <table class="table border-1 rounded" style="margin-bottom: 200px;">
                 <thead>
                     <tr class="border-bottom-line bg-light">
                         <th scope="col">№</th>
