--- a/easy_admin/templates/layout.html
+++ b/easy_admin/templates/layout.html
@@ -9,7 +9,6 @@
             {% endblock title %}
         - IT meýdança Quizz</title>
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-        <link rel="stylesheet" href="{% static 'css/global.css' %}">
         <link rel="stylesheet"
               href="{% static 'bootstrap-icons/font/bootstrap-icons.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/layout.css' %}">
@@ -19,7 +18,7 @@
         {% block head %}
         {% endblock head %}
     </head>
-    <body class="bg-smoke overpass">
+    <body class="bg-smoke overpass def-cursor">
         <nav id="navbar" class="navbar bg-dark navbar-expand-lg">
             <div class='container-fluid'>
                 <a class="navbar-brand m-2 text-light" href="{% url 'home' %}">IT Meýdança Quizz</a>
